# latenthmm

./: .dockerignore  .gitattributes  .gitignore  .replit  Dockerfile  Makefile  README.md  docker-compose.yml  docker-requirements.txt  pyproject.toml  replit.md  requirements.txt  test_hmm.py  test_pd_exp.py
attached_assets/: Pasted-This-is-the-Make-or-Break-protocol-No-more-tweaking-the_1780379126812.txt  Pasted-To-map-out-exactly-what-this-institutional-grade-pipeli_1780336576008.txt
config/: models.yaml  simulation.yaml.example  system.yaml  trading.yaml
data/: audcad_1h.csv  audcad_daily.csv  audchf_1h.csv  audchf_daily.csv  audnzd_1h.csv  audnzd_daily.csv  audusd_1h.csv  btcusd_1h.csv  btcusd_daily.csv  cadchf_1h.csv  cadchf_daily.csv  cadjpy_1h.csv  cadjpy_daily.csv  chfjpy_1h.csv  chfjpy_daily.csv  download_1h.sh  download_basket.sh  download_expansion.sh  euraud_1h.csv  euraud_daily.csv  eurcad_1h.csv  eurcad_daily.csv  eurchf_1h.csv  eurchf_daily.csv  eurgbp-h1-bid-2020-01-01-2024-12-31.csv  eurgbp_daily.csv  eurnok_1h.csv  eurnok_daily.csv  eurnzd_1h.csv  eurnzd_daily.csv  eursek_1h.csv  eursek_daily.csv  eurusd_1h.csv  eurusd_4h_2016_2024.csv  eurusd_daily.csv  gbpaud_1h.csv  gbpaud_daily.csv  gbpcad_1h.csv  gbpcad_daily.csv  gbpchf_1h.csv  (+21 more)
data_pipeline/: data_cleaner.py  download_extra.py  fix_data.py
diagnostics/: audit_real_data.py
live_trading/: get_token.py
memory/: CODEBASE_4.md  FULL_AUDIT_REPORT.md  GROUND_TRUTH_AUDIT_V6_PLAN.md  V5_UNIFIED_ENGINE_DESIGN.md  docker-requirements.txt  docker_requirements.txt
models/: welford.npz
orchestrators/: dynamic_tester.py  ensemble_pipeline.py  grid_search.py  master_pipeline.py  stage2_global_test.py
results/: test_output.json
scripts/: backtest.py  optuna_tune.py  prop_sim.py  train.py  train_cpcv.py  verify_math_parity.py
v3_engine/: download_data.py  forex_results.json  forex_tearsheet.py  ic_tester.py  oos_results.json  oos_tearsheet.py  requirements.txt  start.sh
v4_engine/: backtester.py  basket_backtester.py  compile_engine.py  data_transformer.py  expert_layer.py  feature_expansion.py  gmm_hmm.py  live_bridge.py  live_bridge_ctrader.py  meta_data_prep.py  meta_learner.py  train_meta.py  (+6 more)
(+144 files in other folders)
