[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arch>=8.0.0",
    "fastapi>=0.136.3",
    "hmmlearn>=0.3.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pot>=0.9.6.post1",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.48.0",
    "yfinance>=1.4.1",
]
